
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* _ (char*) ;
 int printf (char*,...) ;

__attribute__((used)) static void
usage(const char *progname)
{
 printf(_("%s resynchronizes a PostgreSQL cluster with another copy of the cluster.\n\n"), progname);
 printf(_("Usage:\n  %s [OPTION]...\n\n"), progname);
 printf(_("Options:\n"));
 printf(_("  -D, --target-pgdata=DIRECTORY  existing data directory to modify\n"));
 printf(_("      --source-pgdata=DIRECTORY  source data directory to synchronize with\n"));
 printf(_("      --source-server=CONNSTR    source server to synchronize with\n"));
 printf(_("  -R, --write-recovery-conf      write configuration for replication\n"
    "                                 (requires --source-server)\n"));
 printf(_("  -n, --dry-run                  stop before modifying anything\n"));
 printf(_("  -N, --no-sync                  do not wait for changes to be written\n"
    "                                 safely to disk\n"));
 printf(_("  -P, --progress                 write progress messages\n"));
 printf(_("      --no-ensure-shutdown       do not automatically fix unclean shutdown\n"));
 printf(_("      --debug                    write a lot of debug messages\n"));
 printf(_("  -V, --version                  output version information, then exit\n"));
 printf(_("  -?, --help                     show this help, then exit\n"));
 printf(_("\nReport bugs to <pgsql-bugs@lists.postgresql.org>.\n"));
}
